BJS2-60588: Потренируем StreamAPI 1